@@ -2,8 +2,8 @@ Package: logcondiscr
 Type: Package
 Title: Estimate a Log-Concave Probability Mass function from Discrete
         i.i.d. Observations
-Version: 1.0.4
-Date: 2013-09-23
+Version: 1.0.5
+Date: 2014-02-05
 Author: Kaspar Rufibach <kaspar.rufibach@gmail.com> and Fadoua Balabdaoui <fadoua@ceremade.dauphine.fr> and Hanna Jankowski <hkj@mathstat.yorku.ca> and Kathrin Weyermann <kathrin.weyermann@bkw-fmb.ch>
 Maintainer: Kaspar Rufibach <kaspar.rufibach@gmail.com>
 Depends: Matrix, mvtnorm, cobs
@@ -12,7 +12,7 @@ License: GPL (>= 2)
 URL: http://www.kasparrufibach.ch ,
         http://www.ceremade.dauphine.fr/~fadoua ,
         http://www.math.yorku.ca/~hkj
-Packaged: 2013-09-23 19:21:17 UTC; rufibach
+Packaged: 2014-02-05 18:53:03 UTC; rufibach
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-09-23 21:55:44
+Date/Publication: 2014-02-06 01:33:11
